--- a/sec-policy/selinux-zabbix/ChangeLog
+++ b/sec-policy/selinux-zabbix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-zabbix/ChangeLog,v 1.2 2011/06/02 13:12:38 blueness Exp $
 
+  22 Jun 2011; <swift@gentoo.org> selinux-zabbix-2.20101213-r1.ebuild:
+  Set EAPI=4 on zabbix policy build
+
 *selinux-zabbix-2.20101213-r1 (12 Jun 2011)
 
   12 Jun 2011; <swift@gentoo.org> +files/fix-services-zabbix-r1.patch,
