--- a/app-editors/xxe/ChangeLog
+++ b/app-editors/xxe/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/xxe
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-editors/xxe/ChangeLog,v 1.39 2009/11/21 12:36:16 patrick Exp $
+
+*xxe-4.9.1 (21 Jul 2011)
+
+  21 Jul 2011; <swift@gentoo.org> -xxe-4.6.1.ebuild, +xxe-4.9.1.ebuild:
+  Bumping to versino 4.9.1
 
 *xxe-4.5.0 (21 Nov 2009)
 
