--- a/sec-policy/selinux-gpg/ChangeLog
+++ b/sec-policy/selinux-gpg/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Jul 2011; <swift@gentoo.org> selinux-gpg-2.20101213-r2.ebuild:
+  Add proper blocker to automatically switch from gnupg to gpg
+
 *selinux-gpg-2.20101213-r2 (22 Jul 2011)
 
   22 Jul 2011; <swift@gentoo.org> +selinux-gpg-2.20101213-r2.ebuild,
