--- a/sec-policy/selinux-base-policy/ChangeLog
+++ b/sec-policy/selinux-base-policy/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.80 2011/07/11 01:59:36 blueness Exp $
 
+*selinux-base-policy-2.20110726-r1 (27 Jul 2011)
+
+  27 Jul 2011; <swift@gentoo.org> +selinux-base-policy-2.20110726-r1.ebuild,
+  +files/patchbundle-selinux-base-policy-2.20110726-r1.tar.bz2:
+  Bump and start with EAPI=4 support
+
 *selinux-base-policy-2.20101213-r20 (19 Jul 2011)
 
   19 Jul 2011; <swift@gentoo.org> -selinux-base-policy-2.20101213-r19.ebuild,
