--- a/app-text/foo/ChangeLog
+++ b/app-text/foo/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*foo-3.0 (08 Aug 2011)
+
+  08 Aug 2011; <swift@gentoo.org> +foo-3.0.ebuild:
+  Testing
+
 *foo-2.0 (08 Aug 2011)
 
   08 Aug 2011; <swift@gentoo.org> +foo-2.0.ebuild:
