--- a/sec-policy/selinux-base-policy/ChangeLog
+++ b/sec-policy/selinux-base-policy/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.80 2011/07/11 01:59:36 blueness Exp $
 
+  04 Sep 2011; <swift@gentoo.org> selinux-base-policy-2.20110726-r4.ebuild:
+  Add support for xdg types
+
 *selinux-base-policy-2.20110726-r3 (19 Aug 2011)
 
   19 Aug 2011; <swift@gentoo.org> -selinux-base-policy-2.20110726-r2.ebuild,
