--- a/sec-policy/selinux-virt/ChangeLog
+++ b/sec-policy/selinux-virt/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-virt/ChangeLog,v 1.6 2011/11/12 20:52:54 swift Exp $
 
+  26 Dec 2011; <swift@gentoo.org> selinux-virt-2.20110726-r1.ebuild:
+  Fix bug #330767 - Support libvirt
+
   12 Nov 2011; <swift@gentoo.org> -selinux-virt-2.20101213.ebuild:
   Removing old policies
 
