--- a/sys-apps/policycoreutils/ChangeLog
+++ b/sys-apps/policycoreutils/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.103 2012/07/10 20:13:17 swift Exp $
 
+  10 Aug 2012; <swift@gentoo.org> policycoreutils-2.1.10-r5.ebuild:
+  More python3 related fixes, now for seobject used by semanage
+
   10 Jul 2012; <swift@gentoo.org> policycoreutils-2.1.10-r3.ebuild:
   Stabilization, drop libcgroup dependency along the way
 
